# mercurial-scm

./: .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yml  Announcement  CONTRIBUTING.md  HOWTO  Howto_update_the_Download_Urls.txt  Main.txt  Makefile  NewTextWorkflow.txt  README  README.md  Todo.txt  about.txt  blatter.ini  filters.py  hgwebsite.py  hgwebsite.wsgi  ignore  pyproject.toml  requirements.txt  run.py  run_server.sh  structure.txt
docker/: Dockerfile
hgscm/: settings.py  urls.py
hgscm/apps/www/: models.py  urls.py  views.py
hgscm/media/: downloads.json
hgscm/media/css/: styles.css
hgscm/templates/: Who-uses-Mercurial.html  about.html  base.html  downloads.html  frontpage.html  learn_mercurial.html  quick_start.html  quotes.txt  thepage.html  who_uses.html  workflow_guide.html
hgscm/templates/tricks/: 01  02
original/hgscm/media/: downloads.json
original/hgscm/templates/: Who-uses-Mercurial.html  about.html  base.html  downloads.html  frontpage.html  learn_mercurial.html  quick_start.html  (+4 more)
original/text/: Main.txt  about.txt  from-svn-to-hg.txt  structure.txt
source/: about.md  conf.py  contribute.md  guide.md  index.md  install.md  learn.md  news.md  quickstart.md  util_hg_website.py  who.md
source/_ext/: sphinx_hg.py
source/_static/: hg-custom.css
src/en/: about.html  index.html  quotes.txt  win.html
static/css/: styles.css
static/javascript/: download.js  typeface.js
static/js/: download.js
templates/: base.html  data  form.html  frontpage.html  index.html  text.html
templates/about/: index.html
templates/donate/: index.html
templates/downloads/: index.html
templates/guide/: index.html
templates/learn/: index.html
templates/quickstart/: index.html
templates/sponsors/: index.html
templates/styles/: styles.css
templates/thepage/: index.html
templates/who/: index.html
text/: Main.txt  Who-uses-Mercurial.txt  about.txt  from-svn-to-hg.txt  learn_mercurial.txt  learning_mercurial_in_workflows.txt  quick_start.txt  workflows.txt
(+30 files in other folders)
