[project]
name = "hg-web-new"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pierre Augier", email = ""},
]
dependencies = ["sphinx>=8.1.3", "sphinx-book-theme>=1.1.3", "myst-nb>=1.1.2", "sphinx-design>=0.6.1", "sphinx-copybutton>=0.5.2", "mercurial>=6.9"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
