[project]
name = "hg-website"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Pierre Augier", email = "pierre.augier@univ-grenoble-alpes.fr" },
]
dependencies = [
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.3",
    "myst-nb>=1.1.2",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "linkify-it-py",
    "mercurial>=6.9",
    "hg-evolve>=11.1.6",
    "hg-git>=1.1.4",
]
requires-python = "==3.11.*"
readme = "README.md"
license={text = "GNU GPLv2 or any later version"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
build-site = "sphinx-build -M html source build"
format-py = "ruff format source"
format-md = {shell="mdformat *.md source/*.md"}
format = {composite = ["format-py", "format-md"]}

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.8.6",
    "mdformat",
    "mdformat-myst",
]
